# neural_network_shape_recognition

./: CMakeLists.txt  README.md
include/: nn.h
src/: shape.c
